--- a/KID/KID.csproj
+++ b/KID/KID.csproj
@@ -9,8 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="KID.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="4.13.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="KID.ico" />
+  </ItemGroup>
+  
+  <PropertyGroup>
+    <ApplicationIcon>KID.ico</ApplicationIcon>
+  </PropertyGroup>
 
 </Project>
