--- a/KID/KID.csproj
+++ b/KID/KID.csproj
@@ -24,8 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Models\ViewModels\" />
-    <Folder Include="Services\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="ProjectTemplates\" />
     <Folder Include="UserProjects\" />
   </ItemGroup>
