add: new localized project templates pack (en-US/ru-RU/uk-UA).
Includes Gold/NextLevel/CheatSheets examples (mouse drawing, console game, animations, scenes, particles, generative spiral) and updates default template path and docs. Adds `Keyboard`/`Mouse` aliases in templates to avoid WPF name collisions.

--- a/KID/DefaultWindowConfiguration.json
+++ b/KID/DefaultWindowConfiguration.json
@@ -3,5 +3,5 @@
     "FontFamily": "Consolas",
     "FontSize": 14,
     "ConsoleMessage": "Консольный вывод...",
-    "TemplateName": "ProjectTemplates/HelloWorld. Console & Graphics.cs"
+    "TemplateName": "ProjectTemplates/ru-RU/HelloWorld.cs"
 }
