refactor: move KID.Library to separate project

--- a/KID.WPF.IDE/KID.WPF.IDE.csproj
+++ b/KID.WPF.IDE/KID.WPF.IDE.csproj
@@ -42,6 +42,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KID.Library\KID.Library.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Resources\Strings.en-US.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
