add: UI settings for font and text size

--- a/KID.WPF.IDE/DefaultWindowConfiguration.json
+++ b/KID.WPF.IDE/DefaultWindowConfiguration.json
@@ -1,7 +1,6 @@
 {
-    "Language": "C#",
-    "FontFamily": "Consolas",
-    "FontSize": 14,
-    "ConsoleMessage": "Консольный вывод...",
-    "TemplateName": "ProjectTemplates/ru-RU/HelloWorld.cs"
+  "ProgrammingLanguage": "C#",
+  "FontFamily": "Consolas",
+  "FontSize": 14,
+  "TemplateName": "ProjectTemplates/ru-RU/HelloWorld.cs"
 }
