--- a/KID.WPF.IDE/KID.WPF.IDE.csproj
+++ b/KID.WPF.IDE/KID.WPF.IDE.csproj
@@ -14,10 +14,13 @@
 
   <ItemGroup>
     <PackageReference Include="AvalonEdit" Version="6.3.1.120" />
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="4.13.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="4.12.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
     <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="RoslynPad.Editor.Windows" Version="4.12.1" />
+    <PackageReference Include="RoslynPad.Roslyn" Version="4.12.1" />
+    <PackageReference Include="RoslynPad.Roslyn.Windows" Version="4.12.1" />
   </ItemGroup>
 
   <ItemGroup>
